"alignment corrected"

--- a/src/frontend/src/components/Bar/bar.css
+++ b/src/frontend/src/components/Bar/bar.css
@@ -15,7 +15,7 @@
 .table td {
   padding: 8px;
   text-align: left;
-  width: 3.50vw;
+  width:3vw;
 }
 
 .bar_rows{
